--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,10 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
-  intl: ^0.19.0
   google_fonts: ^6.1.0
   uuid: 4.2.2
+  table_calendar: ^3.0.9
+  intl: 0.18.1
 
 dev_dependencies:
   flutter_test:
