--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   google_fonts: ^6.1.0
   uuid: 4.2.2
   table_calendar: ^3.0.9
-  intl: 0.18.1
+  intl: ^0.18.1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
