--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   table_calendar: ^3.0.9
   intl: ^0.18.1
   provider: ^6.1.1
+  mask_text_input_formatter: ^2.7.0
 
 dev_dependencies:
   flutter_test:
