adicionado gráfico de agendamentos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.1.1
   mask_text_input_formatter: ^2.7.0
+  fl_chart: ^0.66.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
