--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   mask_text_input_formatter: ^2.7.0
   fl_chart: ^0.66.0
   collection: ^1.18.0
+  time_range_picker: ^2.2.0
 
 dev_dependencies:
   flutter_test:
