iniciação dos dias da semana e nome dos dias

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   collection: ^1.18.0
   time_range_picker: ^2.2.0
   flutter_datetime_picker_plus: ^2.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
