--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   currency_text_input_formatter: ^2.1.11
   duration_picker: ^1.1.1
   firebase_auth: ^4.19.4
+  flutter_web_plugins:
+    sdk: flutter
+  mailer: ^6.1.0
 
 dev_dependencies:
   flutter_test:
