--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,9 @@ dependencies:
   uuid: 4.2.2
   table_calendar: ^3.0.9
   intl: ^0.18.1
-  provider: ^6.1.1
   mask_text_input_formatter: ^2.7.0
   fl_chart: ^0.66.0
-  collection: ^1.18.0
   time_range_picker: ^2.2.0
-  flutter_datetime_picker_plus: ^2.1.0
   shared_preferences: ^2.2.2
   currency_text_input_formatter: ^2.1.11
   duration_picker: ^1.1.1
@@ -40,14 +37,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  assets:
+    - assets/
